[gd_scene load_steps=5 format=3 uid="uid://b7jdbtilc4boq"]

[ext_resource type="Script" uid="uid://d3fddsuo7ckms" path="res://upgrades/scripts/upgrade_node.gd" id="1_c6bor"]
[ext_resource type="Theme" uid="uid://ck22mgvaqi0wd" path="res://ui_themes/default.tres" id="1_q2hfj"]
[ext_resource type="Texture2D" uid="uid://blls3rbi1oujc" path="res://assets/characters/actors/morgana/box1.png" id="3_chkjm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_chkjm"]
bg_color = Color(0, 0, 0, 0.639)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 20.0
expand_margin_top = 20.0
expand_margin_right = 20.0
expand_margin_bottom = 20.0

[node name="RootNode" type="Button"]
z_index = 1
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -604.0
offset_top = -363.0
offset_right = -548.0
offset_bottom = -292.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_q2hfj")
script = ExtResource("1_c6bor")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(28, 30)
scale = Vector2(6.44892, 6.44892)
texture = ExtResource("3_chkjm")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 60.0
offset_right = 115.0
offset_bottom = 92.0
scale = Vector2(0.493854, 0.491752)
text = "0/5"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_right = 11.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TooltipContainer" type="Control" parent="."]
visible = false
z_index = 2
anchors_preset = 0
offset_left = -190.0
offset_top = -202.0
offset_right = 230.0
offset_bottom = 1.0
scale = Vector2(0.79008, 0.79008)
pivot_offset = Vector2(210, 101.5)

[node name="Tooltip" type="Panel" parent="TooltipContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -221.0
offset_top = -127.5
offset_right = 221.0
offset_bottom = 69.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(187.5, 69.5)
theme_override_styles/panel = SubResource("StyleBoxFlat_chkjm")

[node name="VBoxContainer" type="VBoxContainer" parent="TooltipContainer/Tooltip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18

[node name="UpgradeTitle" type="Label" parent="TooltipContainer/Tooltip/VBoxContainer"]
layout_mode = 2
text = "upgrade"
autowrap_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="TooltipContainer/Tooltip/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradeDescription" type="Label" parent="TooltipContainer/Tooltip/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(442, 25)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_constants/line_spacing = 10
theme_override_font_sizes/font_size = 20
text = "qasfdsafsas saf fsa fs ffsfsfsfsfs"
horizontal_alignment = 3
vertical_alignment = 3
autowrap_mode = 3
justification_flags = 161

[node name="MoneyLabel" type="Label" parent="TooltipContainer/Tooltip/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.715491, 0.934862, 1.92523e-06, 1)
theme_override_font_sizes/font_size = 28
text = "$50"
horizontal_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="mouse_entered" from="TooltipContainer" to="." method="_on_tooltip_container_mouse_entered"]
[connection signal="mouse_exited" from="TooltipContainer" to="." method="_on_tooltip_container_mouse_exited"]
